# LearnCppStudy

./: README.md
Chapter1/: CMakeLists.txt  CMakePresets.json  main.cpp
Chapter1/Matrix/: Matrix.cpp  ValueMatrix.cpp
Chapter1/Variable/: testfunc.cpp
Chapter1/include/: Matrix.hpp  ValueMatrix.hpp  testfunc.hpp
